fix: adjust spacing

--- a/src/components/Projects/style.css
+++ b/src/components/Projects/style.css
@@ -1,57 +1,57 @@
 #projects {
-    margin: 50px 0;
+  margin: 50px 0;
 }
 
 .projectCards {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    padding: 0 30px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 20px;
 }
 
 .card {
-    max-width: 330px;
-    height: 240px;
-    background-color: #212121;
-    border: 1px solid #333333;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    padding: 0 15px;
-    margin: 20px 13px 0 13px;
+  max-width: 330px;
+  height: 240px;
+  background-color: #212121;
+  border: 1px solid #333333;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding: 0 15px;
+  margin: 10px 13px;
 }
 
 .card:hover {
-    border: 1px solid #00DF5E;
+  border: 1px solid #00df5e;
 }
 
 .card:hover {
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 .cardImage {
-    width: 300px;
-    height: 130px;
-    background-color: #171717;
-    border: 1px solid #333333;
+  width: 300px;
+  height: 130px;
+  background-color: #171717;
+  border: 1px solid #333333;
 }
 
 .cardImage img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .cardTitle {
-    font-size: 18px;
-    color: #FFFFFF;
-    font-weight: 300;
+  font-size: 18px;
+  color: #ffffff;
+  font-weight: 300;
 }
 
 .stacks {
-    font-size: 14px;
-    color: #828282;
-    font-weight: 300;
-    margin-top: 5px;
+  font-size: 14px;
+  color: #828282;
+  font-weight: 300;
+  margin-top: 5px;
 }
